Addition of more unit tests and tuning of the build file