@@ -1,19 +1,26 @@
 package domderrien.jsontools;
 
+import java.io.IOException;
+import java.io.OutputStream;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.Map;
 
-/**
- * TODO: Provide documentation
- */
 public class GenericJsonObject implements JsonObject {
-    protected HashMap<String, Object> hashMap;
+    protected Map<String, Object> hashMap;
 
     /**
      * Default constructor, useful to generate the object to be sent to the browser
      */
     public GenericJsonObject() {
         hashMap = new HashMap<String, Object>();
+    }
+
+    /**
+     * Constructor made of an existing map
+     */
+    public GenericJsonObject(Map<String, Object> map) {
+        hashMap = map;
     }
 
     @Override
@@ -51,7 +58,29 @@ public class GenericJsonObject implements JsonObject {
                 output.append(((GenericJsonArray) value).toString(index + 1));
             }
             else if (value instanceof String) {
+            	output.append("String: ");
                 output.append("\"").append(value).append("\"");
+            }
+            else if (value instanceof String[]) {
+            	output.append("String[]: ");
+            	String[] arrayOfStrings = (String[]) value;
+            	int limit = arrayOfStrings.length;
+            	if (limit == 0) {
+            		output.append("null");
+            	}
+            	else if (limit == 1) {
+            		output.append("\"").append(arrayOfStrings[0]).append("\"");
+            	}
+            	else {
+    				output.append("[");
+            		for (int i=0; i<limit; i++) {
+            			output.append("\"").append(arrayOfStrings[i]).append("\"");
+            			if (i != limit - 1) {
+            				output.append(",");
+            			}
+            		}
+    				output.append("]");
+            	}
             }
             else {
                 output.append(value);
@@ -83,28 +112,94 @@ public class GenericJsonObject implements JsonObject {
     }
 
     public boolean getBoolean(String key) throws ClassCastException {
-        Boolean value = (Boolean) getObject(key);
-        return Boolean.TRUE.equals(value);
+        Object value = getObject(key);
+        Boolean typedValue = Boolean.FALSE;
+        if (value instanceof String[]) {
+        	String[] arrayOfStrings = (String[]) value;
+        	if (0 < arrayOfStrings.length) {
+        		typedValue = Boolean.parseBoolean(arrayOfStrings[0]);
+        	}
+        }
+        else {
+        	typedValue = (Boolean) value; 
+        }
+        return Boolean.TRUE.equals(typedValue);
     }
 
     public long getLong(String key) throws ClassCastException {
-        return ((Double) getObject(key)).longValue();
+        Object value = getObject(key);
+        Long typedValue = 0L;
+        if (value instanceof String[]) {
+        	String[] arrayOfStrings = (String[]) value;
+        	if (0 < arrayOfStrings.length) {
+        		typedValue = Long.parseLong(arrayOfStrings[0]);
+        	}
+        }
+        else {
+        	if (value == null) {
+        		typedValue = 0L;
+        	}
+        	else if (value instanceof Long) {
+        		typedValue = (Long) value;
+        	}
+        	else { // if (value instanceof Double) {
+        		// Because the JsonParser generates Double instances
+        		typedValue = ((Double) value).longValue();
+        	}
+        }
+        return typedValue.longValue();
     }
 
     public double getDouble(String key) throws ClassCastException, NumberFormatException {
-        return ((Double) getObject(key));
+        Object value = getObject(key);
+        Double typedValue = 0.0D;
+        if (value instanceof String[]) {
+        	String[] arrayOfStrings = (String[]) value;
+        	if (0 < arrayOfStrings.length) {
+        		typedValue = Double.parseDouble(arrayOfStrings[0]);
+        	}
+        }
+        else {
+        	typedValue = value == null ? 0.0D : (Double) value; 
+        }
+        return typedValue.doubleValue();
     }
 
     public String getString(String key) throws ClassCastException {
-        return (String) getObject(key);
+        Object value = getObject(key);
+        String typedValue = null;
+        if (value instanceof String[]) {
+        	String[] arrayOfStrings = (String[]) value;
+        	typedValue = arrayOfStrings.length == 0 ? null : arrayOfStrings[0];
+        }
+        else {
+        	typedValue = (String) value;
+        }
+        return typedValue;
     }
 
     public JsonObject getJsonObject(String key) throws ClassCastException {
-        return (JsonObject) getObject(key);
+        Object value = getObject(key);
+        if (value instanceof String[]) {
+        	throw new ClassCastException("Cannot extract a JsonObject from an array of String instance");
+        }
+        return (JsonObject) value;
     }
 
     public JsonArray getJsonArray(String key) throws ClassCastException {
-        return (JsonArray) getObject(key);
+        Object value = getObject(key);
+        JsonArray typedValue = null;
+        if (value instanceof String[]) {
+        	String[] arrayOfStrings = (String[]) value;
+        	typedValue = new GenericJsonArray();
+        	for (int i=0; i<arrayOfStrings.length; i++) {
+        		typedValue.add(arrayOfStrings[i]);
+        	}
+        }
+        else {
+        	typedValue = (JsonArray) value; 
+        }
+        return typedValue;
     }
 
     public JsonException getJsonException(String key) throws ClassCastException {
@@ -112,36 +207,48 @@ public class GenericJsonObject implements JsonObject {
     }
 
     /** @see java.util.Map#put */
-    protected void putArbitrary(String key, Object object) {
+    protected void putObject(String key, Object object) {
         hashMap.put(key, object);
     }
 
     public void put(String key, boolean value) {
-        putArbitrary(key, value ? Boolean.TRUE : Boolean.FALSE);
+        put(key, value ? Boolean.TRUE : Boolean.FALSE);
+    }
+
+    public void put(String key, Boolean value) {
+        putObject(key, value);
     }
 
     public void put(String key, long value) {
-        putArbitrary(key, new Double(value));
+        put(key, Long.valueOf(value));
+    }
+
+    public void put(String key, Long value) {
+        putObject(key, value);
     }
 
     public void put(String key, double value) {
-        putArbitrary(key, new Double(value));
+        put(key, Double.valueOf(value));
+    }
+
+    public void put(String key, Double value) {
+        putObject(key, value);
     }
 
     public void put(String key, String value) {
-        putArbitrary(key, (Object) value);
+        putObject(key, (Object) value);
     }
 
     public void put(String key, JsonObject value) {
-        putArbitrary(key, (Object) value);
+        putObject(key, (Object) value);
     }
 
     public void put(String key, JsonArray value) {
-        putArbitrary(key, (Object) value);
+        putObject(key, (Object) value);
     }
 
     public void put(String key, JsonException value) {
-        putArbitrary(key, (Object) value);
+        putObject(key, (Object) value);
     }
 
     public void remove(String key) {
@@ -155,4 +262,34 @@ public class GenericJsonObject implements JsonObject {
     public void append(JsonObject additionalValues) {
         hashMap.putAll(additionalValues.getMap());
     }
+
+	public void toStream(OutputStream out, boolean isFollowed) throws IOException {
+		Iterator<String> it = hashMap.keySet().iterator();
+        JsonSerializer.startObject(out);
+		while (it.hasNext()) {
+			String key = it.next();
+			Object value = hashMap.get(key);
+			if (value instanceof Boolean) {
+				JsonSerializer.toStream(key, ((Boolean) value).booleanValue(), out, it.hasNext());
+			}
+			else if (value instanceof Long) {
+				JsonSerializer.toStream(key, ((Long) value).longValue(), out, it.hasNext());
+			}
+			else if (value instanceof Double) {
+				JsonSerializer.toStream(key, ((Double) value).doubleValue(), out, it.hasNext());
+			}
+			else if (value instanceof String) {
+				JsonSerializer.toStream(key, (String) value, out, it.hasNext());
+			}
+			else if (value instanceof JsonObject) {
+				JsonSerializer.introduceComplexValue(key, out);
+				((JsonObject) value).toStream(out, it.hasNext());
+			}
+			else if (value instanceof JsonArray) {
+				JsonSerializer.introduceComplexValue(key, out);
+				((JsonArray) value).toStream(out, it.hasNext());
+			}
+		}
+        JsonSerializer.endObject(out, isFollowed);
+	}
 }
